data/all_generated_tests/raw_wast_tests/nop_ImproperFunctionCallorReturnHandling_575.wast
;; 6. **Test Description**: Formulate a scenario where a function with `nop` instructions is called repeatedly, both directly and indirectly. Ensure the accumulation or modification of state by subsequent function calls is not disrupted.    - **Constraint Checked**: Validates repeated direct and indirect calls.    - **Relation to Improper Handling**: Mismanaged `nop` could disrupt the correct state propagation across calls.

(assert_invalid
  (module
    (func (export "main") (result i32)
      (nop)
      (call $helper)
      (nop)
      (i32.const 42))
    (func $helper
      (nop)
      (nop)
    )
  )
)